hphp/test/zend/good/Zend/tests/objects_012.php.expectf

Fatal error: bar cannot implement foo - it is not an interface in %s/objects_012.php on line 6
